[gd_scene load_steps=3 format=3 uid="uid://b5qfihi01x3kj"]

[ext_resource type="Script" path="res://src/scenes/menus/main_menu.gd" id="1_f3o8o"]
[ext_resource type="PackedScene" uid="uid://dkld2fwdovoqb" path="res://src/scenes/menus/settings/settings_menu.tscn" id="2_y0mua"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_f3o8o")

[node name="MainButtons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.5
offset_right = 100.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="PlayButton" type="Button" parent="MainButtons"]
layout_mode = 2
text = "Play"

[node name="OptionsButton" type="Button" parent="MainButtons"]
layout_mode = 2
text = "Options"

[node name="QuitButton" type="Button" parent="MainButtons"]
layout_mode = 2
text = "Quit"

[node name="SettingsMenu" parent="." instance=ExtResource("2_y0mua")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
size_flags_horizontal = 4
size_flags_vertical = 0

[connection signal="pressed" from="MainButtons/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MainButtons/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MainButtons/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="exit_menu" from="SettingsMenu" to="." method="_on_settings_menu_exit_menu"]
